chore(theme): introduce theme for the blog

--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,6 @@
 baseURL = ''
-languageCode = 'en-us'
-title = 'Shapka'
+title = 'Мама, я в шапці!'
+theme = 'shapka'
+
+languageCode = 'uk-UA'
+defaultContentLanguage = 'uk'
